ARROW-9288: [C++][Dataset] Fix PartitioningFactory with dictionary encoding for HivePartioning